<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="mod">%</string>
    <string name="ac">AC</string>
    <string name="back"><![CDATA[<--]]></string>
</resources>